--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+}
+
+input {
+  @apply w-[full] border border-gray bg-zinc-100/40 px-6 py-2;
+}
