design: 메인 및 로그인/회원가입 UI 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  font-size: 62.5%;
+}
+
+div {
+  box-sizing: border-box;
+}
+
 ul,
 li {
   margin: 0;
